--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,16 @@
     .container {
         @apply w-[calc(100%_-_50px)] max-w-[1200px] mx-auto;
     }
+}
 
-    
+/* Chrome, Safari, Edge, Opera */
+input::-webkit-outer-spin-button,
+input::-webkit-inner-spin-button {
+  -webkit-appearance: none;
+  margin: 0;
+}
+
+/* Firefox */
+input[type=number] {
+  -moz-appearance: textfield;
 }
